Fixed SE overflow

--- a/style.css
+++ b/style.css
@@ -133,7 +133,6 @@ h1 {
     background-color: var(--sekundarni_pozadi);
     border: 2px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
-    font-size: 30px;
     text-align: center;
     border-radius: 10px;
     background-size: cover;
